--- a/adivina.html
+++ b/adivina.html
@@ -7,6 +7,8 @@
           <title>Adivina</title>
 </head>
 <body>
+                    <A href="https://amilsandovalfrancisco.zyrosite.com/">Regresar al menu </A>     
+
           <script>
                var min = 1;
                var max = 100;
